src/test/deca/context/invalid/selection_non_field.deca
// Description :
//    Test de la sélection d'un objet qui n'est pas un champ
//
// Résultats:
//    Ligne 19 : 
//
// Historique:
//    créé le 22/01/2017

class A {
    int x;
}
class B {
    int y;
}
{
    A a = new A();
    B b = new B();
    a.b;
}